--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.6",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "google-map-react": "^1.1.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
